# sppg

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  eff_wordlist.rs  lib.rs  main.rs  original_wordlist.rs  passphrase.rs
src/wordlist/: mod.rs  original.rs  special_char.rs
tests/: main.rs
